--- a/src/components/FarmItem/FarmItem.module.css
+++ b/src/components/FarmItem/FarmItem.module.css
@@ -3,5 +3,20 @@
     background-color: rgb(80, 255, 255);
     width: fit-content;
     width: 300px;
-    margin-top: 1%;
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+}
+
+.main button {
+    margin-top: 3%;
+    width: max-content;
+    background-color: transparent;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 30px;
+    margin-bottom: 3%;
 }
