--- a/src/components/Statisticsitem/StatisticsItem.module.css
+++ b/src/components/Statisticsitem/StatisticsItem.module.css
@@ -4,6 +4,11 @@
     justify-content: center;
     align-items: center;
     margin: 1%;
-    flex-direction: column;
+    flex-direction: column-reverse;
     width: 300px;
+}
+
+.main img {
+    width: 900px;
+    height: 500px;
 }
