--- a/src/components/FarmItem/FarmItem.module.css
+++ b/src/components/FarmItem/FarmItem.module.css
@@ -8,6 +8,8 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
+    font-size: 20px;
 }
 
 .main button {
