--- a/src/components/ProductItem/ProductItem.module.css
+++ b/src/components/ProductItem/ProductItem.module.css
@@ -3,4 +3,17 @@
     display: flex;
     flex-direction: column;
     margin: 1%;
+    padding: 10px;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+}
+
+.submain {
+    padding: 3px;
+}
+
+.main div button {
+    cursor: pointer;
 }
