--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 33px;
+
 }
 
 .header div button {
@@ -17,7 +19,10 @@
 }
 
 .main {
-    background-color: teal;
+    font-size: 25px;
+    border-radius: 33px;
+    padding: 2px;
+    background-color: rgba(0, 128, 128, 0.479);
     font-size: 19px;
     display: flex;
     justify-content: space-evenly;
