--- a/src/components/PlanItem/PlanComponent.module.css
+++ b/src/components/PlanItem/PlanComponent.module.css
@@ -1,8 +1,10 @@
 .main {
-    background-color: rgba(222, 184, 135, 0.171);
+    background-color: rgba(177, 222, 135, 0.623);
     font-size: 20px;
     width: 300px;
-    margin: 2%;
+    margin: 0.5%;
     padding: 5px;
     cursor: pointer;
+    border-radius: 10px;
+    padding: 3px;
 }
