--- a/src/components/ProductItem/ProductItem.module.css
+++ b/src/components/ProductItem/ProductItem.module.css
@@ -1,10 +1,19 @@
 .main {
     background-color: rgba(8, 180, 171, 0.548);
     font-size: 20px;
-    width: 300px;
+    width: 350px;
     margin: 0.5%;
-    padding: 5px;
     cursor: pointer;
     border-radius: 10px;
     padding: 3px;
+}
+
+.main div {
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.buts {
+    margin-left: 60px;
 }
