--- a/src/pages/FarmPage/FarmPage.module.css
+++ b/src/pages/FarmPage/FarmPage.module.css
@@ -17,5 +17,10 @@
 }
 
 .list {
-    background-color: burlywood;
+    background-color: rgba(0, 255, 255, 0.527);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 }
